# technical_papers

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  BUILDING.md  CI_SETUP.md  LICENSE  Makefile  QUICKSTART.md  README.md  REVIEW.md  project_janus.tex  pyproject.toml  setup.sh
.github/: QUICKSTART.md
.github/workflows/: build-pdf.yml  ci-cd.yml  ci.yml
archive/: complete.tex  forward.tex  main.tex  main_content.tex  neuro.tex  rust.tex
docs/: CONTRIBUTING.md  INSTALLATION_VERIFIED.md  PRECOMMIT_SETUP.md  PYTHON_SETUP.md  SETUP_SUMMARY.md
project_janus/: BIBLIOGRAPHY_GUIDE.md  README.md  THEORY_FOCUSED_CHANGES.md  UPDATE_SUMMARY.md  backward.tex  compile.sh  complete.tex  extract_content.sh  janus.bcf  janus.bib  janus.run.xml  janus.tex  project_janus.tex  rust.tex
project_janus/examples/: README.md  requirements.txt  visual_10_recall_gate.py  visual_11_umap_evolution.py  visual_12_runtime_topology.py  visual_13_microservices_ecosystem.py  visual_1_gaf_pipeline.py  visual_2_lob_gaf_comparison.py  visual_3_vivit_attention.py  visual_4_ltn_grounding.py  visual_5_ltn_truth_surface.py  visual_6_fusion_gate.py  visual_7_opal_decision.py  visual_8_mahalanobis.py  visual_9_memory_consolidation.py  visualization_specification.md
project_janus/research/: research-crowding.md  research-janus.md
scripts/: build.sh  test_all_visuals.sh  test_v7_v11.sh
tests/: __init__.py  conftest.py  test_all_visuals.py  test_visual_5.py
